<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResAndroid"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtPorAndroid"
        app:layout_constraintTop_toBottomOf="@+id/txtResIos" />

    <TextView
        android:id="@+id/txtResIos"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtPorIos"
        app:layout_constraintTop_toBottomOf="@+id/txtResLinux" />

    <TextView
        android:id="@+id/txtResLinux"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtPorLinux"
        app:layout_constraintTop_toBottomOf="@+id/txtResWindows" />

    <TextView
        android:id="@+id/txtEncuesta"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:text="@string/Encuesta"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtVota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/Vota"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEncuesta" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVota">

        <RadioButton
            android:id="@+id/rbWindows"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/Windows"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbLinux"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/linux"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbIOS"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/ios"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbAndroid"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/Android"
            android:textSize="16sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imgWindows"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Windows"
        app:layout_constraintStart_toEndOf="@+id/rbGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtVota"
        app:srcCompat="@drawable/windows"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgLinux"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/linux"
        app:layout_constraintStart_toEndOf="@+id/rbGroup"
        app:layout_constraintTop_toBottomOf="@+id/imgWindows"
        app:srcCompat="@drawable/linux" />

    <ImageView
        android:id="@+id/imgIOS"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/ios"
        app:layout_constraintStart_toEndOf="@+id/rbGroup"
        app:layout_constraintTop_toBottomOf="@+id/imgLinux"
        app:srcCompat="@drawable/ios" />

    <ImageView
        android:id="@+id/imgAndroid"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/Android"
        app:layout_constraintStart_toEndOf="@+id/rbGroup"
        app:layout_constraintTop_toBottomOf="@+id/imgIOS"
        app:srcCompat="@drawable/android"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/Guardar"
        android:onClick="votar"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbGroup"
        app:srcCompat="@drawable/save" />

    <TextView
        android:id="@+id/txtResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:text="@string/Resultado"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn" />

    <TextView
        android:id="@+id/txtPorWindows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:text="@string/porWindows"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultados" />

    <TextView
        android:id="@+id/txtPorLinux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:text="@string/porLinux"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorWindows" />

    <TextView
        android:id="@+id/txtPorIos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:text="@string/porIos"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorLinux" />

    <TextView
        android:id="@+id/txtPorAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:text="@string/porAndroid"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorIos" />

    <TextView
        android:id="@+id/txtResWindows"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtPorWindows"
        app:layout_constraintTop_toBottomOf="@+id/txtResultados" />

</androidx.constraintlayout.widget.ConstraintLayout>